fluxcd/clusters/pi/home/sync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sync
  namespace: home
spec:
  selector:
    app: sync
  ports:
    - name: sync-web-ui
      port: 80
      targetPort: sync-web-ui
